# ShPlayer

./: CMakeLists.txt  README.md
lib/ffmpeg/: CMakeLists.txt
lib/ffmpeg/ffmpeg-mac/include/libavutil/: ffversion.h
lib/ffmpeg/ffmpeg-mac/lib/: libavcodec.58.dylib  libavdevice.58.9.103.dylib  libavdevice.58.dylib  libavfilter.7.77.101.dylib  libavfilter.dylib  libavformat.58.42.100.dylib  libavformat.58.dylib  libavutil.56.42.102.dylib  libavutil.56.dylib  libpostproc.55.6.100.dylib  libpostproc.55.dylib  libswresample.3.6.100.dylib  libswresample.3.dylib  libswscale.5.6.101.dylib  libswscale.dylib
lib/ffmpeg/ffmpeg-mac/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
lib/ffmpeg/ffmpeg-mac/share/doc/ffmpeg/: developer.html  faq.html  fate.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-scaler.html  ffmpeg-utils.html  ffmpeg.html  ffplay-all.html  ffplay.html  ffprobe-all.html  ffprobe.html  general.html  git-howto.html  libavcodec.html  libavdevice.html  libavfilter.html  libavformat.html  libavutil.html  libswresample.html  libswscale.html  mailing-list-faq.html  nut.html  platform.html
lib/ffmpeg/ffmpeg-mac/share/man/man1/: ffmpeg-all.1  ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-utils.1  ffmpeg.1  ffplay-all.1  ffprobe-all.1
lib/ffmpeg/ffmpeg-win/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
src/: main.cpp  videoplayer.cpp  videoplayer.h
src/shplayer-ffmpeg/: codecinfo.cpp  codecinfo.h  demuxer.cpp  demuxer.h  frame.cpp  frame.h  packet.cpp  packet.h  videodecoder.cpp  videodecoder.h  videofile.cpp  videofile.h  videofileutil.cpp  videofileutil.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  videorenderwidget.cpp  videorenderwidget.h  videorenderwidget2.cpp  videorenderwidget2.h  videorenderwidget3.cpp  videorenderwidget3.h
